--- a/blocks/card/__block/card__block.css
+++ b/blocks/card/__block/card__block.css
@@ -1,5 +1,5 @@
 .card__block {
-  max-width: 282px;;
+  max-width: 282px;
   display: flex;
   justify-content: space-between;
   padding: 25px 21px 31px 15px;
