--- a/blocks/card/__like-button/_active/card__like-button_active.css
+++ b/blocks/card/__like-button/_active/card__like-button_active.css
@@ -1,4 +1,4 @@
-.button__like_active {
+.card__like-button_active {
   background-image: url(../../../../images/active_like.svg);
   background-position: center;
   background-repeat: no-repeat;
