--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,4 +1,4 @@
-.button__close {
+.popup__close-button {
   width: 40px;
   height: 40px;
   background-image: url(../../../images/close-button.svg);
@@ -16,12 +16,12 @@
   z-index: 2;
 }
 
-.button__close:hover {
+.popup__close-button:hover {
   opacity: .6;
 }
 
 @media (max-width: 425px) {
-  .button__close {
+  .popup__close-button {
     width: 40px;
     height: 40px;
     top: -48px;
