--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -1,4 +1,4 @@
-.button__save {
+.popup__save-button {
   width: 358px;
   height: 50px;
   background-repeat: no-repeat;
@@ -17,12 +17,12 @@
   text-align: center;
 }
 
-.button__save:hover {
+.popup__save-button:hover {
   opacity: .8;
 }
 
 @media (max-width: 425px) {
-  .button__save {
+  .popup__save-button {
     width: 238px;
     height: 46px;
     padding: 14px 0 14px;
