--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,4 +1,4 @@
-.button__add {
+.profile__add-button {
   width: 150px;
   height: 50px;
   margin: 75px 0 0 0;
@@ -13,19 +13,19 @@
   outline: none;
 }
 
-.button__add:hover {
+.profile__add-button:hover {
   opacity: 0.6;
 }
 
 @media (max-width: 950px) {
-  .button__add {
+  .profile__add-button {
     width: 100%;
     margin: 36px 0;
   }
 }
 
 @media (max-width: 450px) {
-  .button__add {
+  .profile__add-button {
     max-width: 282px;
     width: 100%;
   }
