--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,4 +1,4 @@
-.button__edit {
+.profile__edit-button {
   width: 24px;
   height: 24px;
   background-image: url(../../../images/edit-button.svg);
@@ -14,12 +14,12 @@
   outline: none;
 }
 
-.button__edit:hover {
+.profile__edit-button:hover {
   opacity: 0.6;
 }
 
 @media (max-width: 768px) {
-  .button__edit {
+  .profile__edit-button {
     width: 18px;
     height: 18px;
     margin: 25px 0 0 10px;
