--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,5 @@
 .header {
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(54, 54, 54, .7);
+  box-sizing: border-box; 
   display: flex;
 }
