--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,7 +1,10 @@
 .popup__container {
+  display: flex;
+  flex-direction: column;
   max-width: 430px;
+  min-height: 322px;
   width: 100%;
-  margin: 195px 425px;
+  margin: 195px auto;
   padding: 35px 36px 37px;
   position: relative;
   box-sizing: border-box;
@@ -10,11 +13,22 @@
   background-color: white;
 }
 
+
 @media (max-width: 425px) {
   .popup__container {
-    max-width: 282px;
-    width: 100%;
+    width: 282px;
     margin: 123px 19px;
     padding: 25px 22px;
   }
 }
+
+@media (max-width: 375px) {
+  .popup__container {
+    margin: 123px auto;
+  }
+}
+ @media (max-width: 320px) {
+   .popup__container {
+     margin: 123px 19px;
+   }
+ }
