--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -7,6 +7,7 @@
   margin: 48px 0 0;
   padding: 14px 0 18px;
   border: 2px solid black;
+  border-radius: 2px;
   color: white;
   cursor: pointer;
   transition: opacity 0.2s ease-in-out;
@@ -23,7 +24,8 @@
 
 @media (max-width: 425px) {
   .popup__save-button {
-    width: 238px;
+    max-width: 238px;
+    width: 10;
     height: 46px;
     padding: 14px 0 14px;
     margin: 59px 0 0;
