--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,10 +4,11 @@
   justify-content: center;
   background-color: rgba(0, 0, 0, .5);
   position: fixed;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   display: none;
-  z-index: 2;
 }
