--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,6 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
+@import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
 
 @import url(../blocks/header/header.css);
@@ -33,10 +34,9 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/_open/popup_open.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
-@import url(../blocks/popup/__user/popup__user.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__data/popup__data.css);
-@import url(../blocks/popup/__name/popup__name.css);
+@import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__job/popup__job.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 
