--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -1,4 +1,5 @@
 .profile__job {
+  max-width: 336px;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -22,6 +23,7 @@
 
 @media (max-width: 425px) {
   .profile__job {
+    max-width: 282px;
     margin: 14px 0 0;
   }
 }
