--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -7,7 +7,8 @@
   background-image: url(../../../images/like.svg);
   background-repeat: no-repeat;
   background-position: center;
-  background-color: white;
+  background-color: transparent;
+  opacity: 1;
   border: none;
   transition: opacity 0.2s ease-in-out;
   outline: none;
