--- a/pages/index.css
+++ b/pages/index.css
@@ -18,13 +18,15 @@
 @import url(../blocks/profile/__box/profile__box.css);
 @import url(../blocks/profile/__info/profile__info.css);
 
-@import url(../blocks/elements/elements.css);
-@import url(../blocks/elements/__container/elements__container.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__container/cards__container.css);
 @import url(../blocks/card/card.css);
 @import url(../blocks/card/__block/card__block.css);
+@import url(../blocks/card/__list/card__list.css);
 @import url(../blocks/card/__image/card__image.css);
 @import url(../blocks/card/__title/card__title.css);
 @import url(../blocks/card/__like-button/card__like-button.css);
+@import url(../blocks/card/__trash-button/card__trash-button.css);
 
 
 @import url(../blocks/footer/footer.css);
