--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -10,5 +10,9 @@
   left: 0;
   bottom: 0;
   right: 0;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition-property: opacity visibility;
+  transition-duration: .6s;
+  transition-timing-function: ease-in-out;
 }
