--- a/pages/index.css
+++ b/pages/index.css
@@ -26,6 +26,7 @@
 @import url(../blocks/card/__image/card__image.css);
 @import url(../blocks/card/__title/card__title.css);
 @import url(../blocks/card/__like-button/card__like-button.css);
+@import url(../blocks/card/__like-button/_active/card__like-button_active.css);
 @import url(../blocks/card/__trash-button/card__trash-button.css);
 
 
@@ -36,8 +37,15 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/_open/popup_open.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
+@import url(../blocks/popup/__close-button/_fullscreen/popup__close-button_fullscreen.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__data/popup__data.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup/__fullscreen/popup__fullscreen.css);
+@import url(../blocks/popup/__container/_fullscreen/popup__container_fullscreen.css);
+
+@import url(../blocks/fullscreen/fullscreen.css);
+@import url(../blocks/fullscreen/__image/fullscreen__image.css);
+@import url(../blocks/fullscreen/__caption/fullscreen__caption.css);
 
