--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -19,3 +19,11 @@
  .popup__input:last-of-type {
   margin-bottom: 0;
  }
+
+ .popup__input + .popup__input-error_active {
+   margin-top: -25px;
+ }
+
+ .popup__input + .popup__input-error_active:last-of-type {
+  margin-top: 5px;
+}
