--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -1,9 +1,13 @@
 .card__like-button {
+  position: absolute;
+  top: 304px;
+  right: 20px;
+  bottom: 38px;
+  left: 240px;
   cursor: pointer;
-  margin: 5px 0 5px 1px;
   width: 22px;
   height: 19px;
-  padding: 0;
+  margin: 0;
   background-image: url(../../../images/like.svg);
   background-repeat: no-repeat;
   background-position: center;
