--- a/src/blocks/profile/__box/profile__box.css
+++ b/src/blocks/profile/__box/profile__box.css
@@ -1,21 +1,17 @@
 .profile__box {
+  position: relative;
   max-width: 880px;
-  display: flex;
-  flex-direction: row;
-  margin: 40px 0 51px;
+  
 }
 
 @media (max-width: 950px) {
   .profile__box {
     align-items: center;
-    margin: 40px 0 0;
   }
 }
 
 @media (max-width: 470px) {
   .profile__box {
     flex-direction: column;
-    align-items: center;
-    margin: 40px 0 0;
   }
 }
