--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -1,6 +1,8 @@
 .profile {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 40px 0 51px;
 }
 
 @media (max-width: 950px) {
