--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -17,6 +17,7 @@
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/profile/__box/profile__box.css);
 @import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__avatar-edit/profile__avatar-edit.css);
 
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/cards/__container/cards__container.css);
@@ -28,6 +29,7 @@
 @import url(../blocks/card/__like-button/card__like-button.css);
 @import url(../blocks/card/__like-button/_active/card__like-button_active.css);
 @import url(../blocks/card/__trash-button/card__trash-button.css);
+@import url(../blocks/card/__like-counter/card__like-counter.css);
 
 
 @import url(../blocks/footer/footer.css);
@@ -35,13 +37,16 @@
 
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__container-small/popup__container-small.css);
 @import url(../blocks/popup/_open/popup_open.css);
+@import url(../blocks/popup/__title-small/popup__title-small.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__close-button/_fullscreen/popup__close-button_fullscreen.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup/__save-button/_small/popup__save-button_small.css);
 @import url(../blocks/popup/_type/popup_type_image.css);
 @import url(../blocks/popup/__container/_fullscreen/popup__container_fullscreen.css);
 @import url(../blocks/popup/__form/_type/popup__form_type_error.css);
