ADD: class Api, class PopupWithSubmit

--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -1,3 +1,15 @@
 .profile__info {
   max-width: 336px;
+  margin-right: 100px;
+}
+ @media (max-width: 1020px) {
+   .profile__info {
+     margin-right: 80px;
+   }
+ }
+
+ @media (max-width: 950px) {
+  .profile__info {
+    margin-right: 0;
+  }
 }
