--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -29,6 +29,7 @@
 @import url(../blocks/card/__like-button/card__like-button.css);
 @import url(../blocks/card/__like-button/_active/card__like-button_active.css);
 @import url(../blocks/card/__trash-button/card__trash-button.css);
+@import url(../blocks/card/__trash-button/_visible/card__trash-button_visible.css);
 @import url(../blocks/card/__like-counter/card__like-counter.css);
 
 
@@ -47,6 +48,8 @@
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__save-button/_small/popup__save-button_small.css);
+@import url(../blocks/popup/__avatar-button/popup__avatar-button.css);
+@import url(../blocks/popup/__avatar-link/popup__avatar-link.css);
 @import url(../blocks/popup/_type/popup_type_image.css);
 @import url(../blocks/popup/__container/_fullscreen/popup__container_fullscreen.css);
 @import url(../blocks/popup/__form/_type/popup__form_type_error.css);
