--- a/src/blocks/profile/__add-button/profile__add-button.css
+++ b/src/blocks/profile/__add-button/profile__add-button.css
@@ -1,5 +1,5 @@
 .profile__add-button {
-  width: 150px;
+  min-width: 150px;
   height: 50px;
   background-image: url(../../../images/add--button.svg);
   background-repeat: no-repeat;
@@ -10,7 +10,6 @@
   cursor: pointer;
   transition: opacity 0.2s ease-in-out;
   outline: none;
-  margin: 35px 0 35px 246px;  
   /* //сделать нормальное расстояние кнопки */
 }
 
