--- a/src/blocks/profile/__job/profile__job.css
+++ b/src/blocks/profile/__job/profile__job.css
@@ -9,6 +9,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  text-align: left;
 }
 
 
@@ -23,6 +24,7 @@
 
 @media (max-width: 425px) {
   .profile__job {
+    text-align: center;
     max-width: 282px;
     margin: 14px 0 0;
   }
