--- a/src/blocks/card/__like-counter/card__like-counter.css
+++ b/src/blocks/card/__like-counter/card__like-counter.css
@@ -7,7 +7,7 @@
   margin: 0;
   width: 10px;
   height: 13px;
-  Font-family: Inter;
+  font-family: inter;
   font-style: normal;
   font-weight: normal;
   text-align: center;
