--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@
 .card__like-button_active{background-image:url(fe17a515669479b1e649.svg);background-position:50%;background-repeat:no-repeat}.card__like-button_active:hover{opacity:1}
 .card__trash-button{background-color:transparent;background-image:url(2af49b82d305a6ea3442.svg);background-position:top;background-repeat:no-repeat;border:none;cursor:pointer;height:19.3px;outline:none;position:absolute;right:15px;top:18px;transition:opacity .2s ease-in-out;visibility:hidden;width:18px}.card__trash-button:hover{opacity:.6}
 .card__trash-button_visible{visibility:visible}
-.card__like-counter{Font-family:Inter;bottom:22px;color:#000;font-style:normal;font-weight:400;height:13px;left:246px;margin:0;position:absolute;right:22px;text-align:center;top:326px;width:10px}
+.card__like-counter{bottom:22px;color:#000;font-family:inter;font-style:normal;font-weight:400;height:13px;left:246px;margin:0;position:absolute;right:22px;text-align:center;top:326px;width:10px}
 
 .footer__text{color:#545454;font-size:18px;font-style:normal;font-weight:400;line-height:22px;margin:0;padding:67px 0 60px}@media (max-width:425px){.footer__text{font-size:14px;font-style:normal;font-weight:400;line-height:17px}}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;font-family:Inter,Arial,Helvetica,sans-serif;height:100%;justify-content:center;left:0;opacity:0;position:fixed;right:0;top:0;transition-duration:.6s;transition-property:opacity visibility;transition-timing-function:ease-in-out;visibility:hidden;width:100%}
